--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "djcur1gkx",
+    "ApiKey": "626487248517596",
+    "ApiSecret": "RUgK1KsoywKzzGPiuaOp10338fQ"
+  }
 }
